--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "svelte-windicss-preprocess": "^3.5.2"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-web3": "^1.3.4"
   }
 }
