--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "svelte-windicss-preprocess": "^3.5.2"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0",
-    "svelte-web3": "^1.3.4"
+    "ethers": "^5.5.3",
+    "sirv-cli": "^1.0.0"
   }
 }
